--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@ html, body, #root {
   margin: 0;
   box-sizing: border-box;
 }
+
+.appContainer {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  width: 100%;
+  height: 100%;
+}
