--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,16 @@ html, body, #root {
   box-sizing: border-box;
 }
 
-.appContainer {
+.app-container {
   display: grid;
   grid-template-columns: 300px 1fr;
   width: 100%;
   height: 100%;
+}
+
+.tree-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
 }
