--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ html, body, #root {
   grid-template-columns: 300px 1fr;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .tree-wrapper {
@@ -16,4 +17,5 @@ html, body, #root {
   flex-direction: column;
   gap: 20px;
   width: 100%;
+  overflow: auto;
 }
